added oregon running clinic

--- a/index.html
+++ b/index.html
@@ -96,6 +96,34 @@
 
                         <div id="portfolio" class="portfolio-3 clearfix">
 
+                            <!-- Oregon Running Clinic -->
+                            <article class="portfolio-item">
+                                <div class="portfolio-image">
+                                    <a data-toggle="modal" data-target="#running-clinic" href="#">
+                                        <img src="images/orc-ss.png" style="border: 1px solid #000 !important"  alt="Oregon Running Clinic">
+                                    </a>
+                                </div>
+
+                                <!-- Portland Running Clinic CONTENT -->
+                                <div class="modal fade" id="running-clinic" tabindex="-1" role="dialog" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-body">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                    <h4 class="modal-title">Oregon Running Clinic</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <p>For this website, I created all of the assets using Photoshop and Illustrator (except for the logo), and did all of the coding using HTML, JS, CSS and Bootstrap. I also worked on most of the copywriting, and managed the hosting.<br>
+                                                    <a href="http://www.oregonrunningclinic.com" target="_blank">OregonRunningClinic.com</a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+
                             <!-- Dental Websites -->
                             <article class="portfolio-item">
                                 <div class="portfolio-image">
@@ -114,7 +142,7 @@
                                                     <h4 class="modal-title">Dental Websites</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>I have been building single page websites for the company Tyson Steele for the past nine months. Click on any of the following URL's to view some of the websites I've helped to produce for them.
+                                                    <p>I have been building single page websites for the company Tyson Steele for the past year. Click on any of the following URL's to view some of the websites I've helped to produce for them.
                                                     <br>
                                                     <a href="http://www.crsmile.com/" target="_blank">crsmile.com</a>
                                                     <br>
@@ -181,35 +209,6 @@
                                                 <div class="modal-body">
                                                     <p>I created this website for a company that enables people to donate their body to science. They provided me with a pdf, and from there, I broke the content down into easily digestible sections of information.<br>
                                                     <a href="http://eegdonation.com/" target="_blank">eegdonation.com </a></p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
-
-                            <!-- One Design Per Day -->
-                            <article class="portfolio-item" >
-                                <div class="portfolio-image">
-                                    <a data-toggle="modal" data-target="#one-design" href="#">
-                                        <img src="images/one-design-ss.png" style="border-left: 1px solid #000; border-right: 1px solid #000; border-bottom: 1px solid #000" >
-                                    </a>
-                                </div>
-
-                                <!-- One Design Per Day CONTENT -->
-                                <div class="modal fade" id="one-design" tabindex="-1" role="dialog" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-body">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                    <h4 class="modal-title">One Design Per Day</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <p>This website was created as a way for me to showcase my logo/design chops, and to keep me accountable for creating new designs and sharpening my skillz. <br>
-                                                    <a href="http://onedesignperday.space/" target = "_blank">one-design-per-day.space</a>
-                                                    </p>
-
                                                 </div>
                                             </div>
                                         </div>
