change to modal wording

--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
                                                     <h4 class="modal-title">Oregon Running Clinic</h4>
                                                 </div>
                                                 <div class="modal-body">
-                                                    <p>For this website, I created all of the assets using Photoshop and Illustrator (except for the logo), and did all of the coding using HTML, JS, CSS and Bootstrap. I also worked on most of the copywriting, and managed the hosting.<br>
+                                                    <p>For this website, I created all of the assets using Photoshop and Illustrator (except for the logo), and did all of the coding using HTML, JS, CSS and Bootstrap. I also helped with the copywriting, and managed the hosting.<br>
                                                     <a href="http://www.oregonrunningclinic.com" target="_blank">OregonRunningClinic.com</a>
                                                     </p>
                                                 </div>
