added jbac test site to portfolio to showcase wordpress experience

--- a/index.html
+++ b/index.html
@@ -124,6 +124,34 @@
                                 </div>
                             </article>
 
+                            <!-- The Jbac -->
+                            <article class="portfolio-item" >
+                                <div class="portfolio-image">
+                                    <a data-toggle="modal" data-target="#family-care" href="#">
+                                        <img src="images/jbac-portfolio.png" style="border: 1px solid #000 !important" alt="Jacuzzi Boys Athletic Club">
+                                    </a>
+                                </div>
+
+                                <!-- Jacuzzi Boys CONTENT -->
+                                <div class="modal fade" id="family-care" tabindex="-1" role="dialog" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-body">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                    <h4 class="modal-title">Jacuzzi Boys Athletic Club</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <!-- <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br /> -->
+                                                    <p>This was my first web development project, and I am currently updating it via Wordpress. For this site, I created a child theme, modified the PHP, added new templates, added Bootstrap and a new navigation bar, created all of the assets using Photoshop, modified the styles via CSS, made it interactive using JavaScript, and used HTML to code all of the pages. You can view the test site here: <a href="http://www.youngcreativetesting.co/" target="_blank">testsite.co</a> and the original site here: <a href="http://www.thejbac.com" target="_blank">thejbac.com.</a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+
                             <!-- Dental Websites -->
                             <article class="portfolio-item">
                                 <div class="portfolio-image">
@@ -216,34 +244,7 @@
                                 </div>
                             </article>
 
-                            <!-- The Jbac -->
-                            <article class="portfolio-item" >
-                                <div class="portfolio-image">
-                                    <a data-toggle="modal" data-target="#family-care" href="#">
-                                        <img src="images/optimized/the-jbac-ss.png" style="border: 1px solid #000 !important" alt="Jacuzzi Boys Athletic Club">
-                                    </a>
-                                </div>
 
-                                <!-- Jacuzzi Boys CONTENT -->
-                                <div class="modal fade" id="family-care" tabindex="-1" role="dialog" aria-hidden="true">
-                                    <div class="modal-dialog">
-                                        <div class="modal-body">
-                                            <div class="modal-content">
-                                                <div class="modal-header">
-                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
-                                                    <h4 class="modal-title">Jacuzzi Boys Athletic Club</h4>
-                                                </div>
-                                                <div class="modal-body">
-                                                    <!-- <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br /> -->
-                                                    <p>I created this website for a local Portland running club, of which I am a proud member.
-                                                    <a href="http://www.thejbac.com/" target="_blank">thejbac.com</a>
-                                                    </p>
-                                                </div>
-                                            </div>
-                                        </div>
-                                    </div>
-                                </div>
-                            </article>
 
                     </div>
 
