added two new projects to portfolio

--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
                                                 </div>
                                                 <div class="modal-body">
                                                     <!-- <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br /> -->
-                                                    <p>This was my first web development project, and I am currently updating it via Wordpress. For this site, I created a child theme, modified the PHP, added new templates, added Bootstrap and a new navigation bar, created all of the assets using Photoshop, modified the styles via CSS, made it interactive using JavaScript, and used HTML to code all of the pages. You can view the test site here: <a href="http://www.youngcreativetesting.co/" target="_blank">testsite.co</a> and the original site here: <a href="http://www.thejbac.com" target="_blank">thejbac.com.</a>
+                                                    <p>I built this site for a local Portland running club, of which I am a proud member. This one was developed using Wordpress, and I created a child theme, modified the PHP, added new templates, added Bootstrap and a new navigation bar, created all of the assets using Photoshop, modified the styles via CSS, made it interactive using JavaScript, and used HTML to code up all of the pages. You can view it here: <a href="http://www.thejbac.com" target="_blank">thejbac.com.</a>
                                                     </p>
                                                 </div>
                                             </div>
@@ -151,6 +151,35 @@
                                     </div>
                                 </div>
                             </article>
+
+                            <!-- PECAA -->
+                            <article class="portfolio-item" >
+                                <div class="portfolio-image">
+                                    <a data-toggle="modal" data-target="#pecaa" href="#">
+                                        <img src="images/Pecaa.png" style="border: 1px solid #000 !important" alt="PECAA">
+                                    </a>
+                                </div>
+
+                                <!-- PECAA CONTENT -->
+                                <div class="modal fade" id="pecaa" tabindex="-1" role="dialog" aria-hidden="true">
+                                    <div class="modal-dialog">
+                                        <div class="modal-body">
+                                            <div class="modal-content">
+                                                <div class="modal-header">
+                                                    <button type="button" class="close" data-dismiss="modal" aria-hidden="true">&times;</button>
+                                                    <h4 class="modal-title">Professional Eyecare Associates of America</h4>
+                                                </div>
+                                                <div class="modal-body">
+                                                    <!-- <img src="images/jbac-zoomed.jpg" alt="Jbac Photo" class="img-responsive hidden-xxs hidden-xs" /><br /> -->
+                                                    <p>I've been put in charge of single-handedly maintaining over 250 Wordpress websites while the lead developer of this company takes a month-long vacation. You can view some of their work here: <a href="http://www.pecaa.com/" target="_blank">Pecaa.com.</a>
+                                                    </p>
+                                                </div>
+                                            </div>
+                                        </div>
+                                    </div>
+                                </div>
+                            </article>
+
 
                             <!-- Dental Websites -->
                             <article class="portfolio-item">
